setup (docker): add redis container and url env var

--- a/.env_example
+++ b/.env_example
@@ -11,3 +11,5 @@ FASTAPI_CMD='uvicorn main:app --host 0.0.0.0 --port 8000 --reload' # --reload to
 
 FASTAPI_IMAGE='pokeapi/dev:v1.0'
 # FASTAPI_IMAGE='pokeapi/prod:v1.0'
+
+REDIS_URL='redis://redis_addr:6379'
