setup (docker): add DOCS env variable to enable/disable swagger docs

--- a/.env_example
+++ b/.env_example
@@ -14,4 +14,5 @@ FASTAPI_IMAGE='pokeapi/dev:v1.0'
 
 REDIS_URL='redis://redis_addr:6379'
 
+# To enable/disable swagger docs (e.g. disable it for production)
 DOCS=True
